@@ -79,41 +79,44 @@ class TestGemPlatform < RubyGemTestCase
 
   def test_self_normalize
     test_cases = {
-      'amd64-freebsd6'         => ['amd64',     'freebsd', '6'],
-      'java'                   => [nil,         'java',    nil],
-      'powerpc-darwin7'        => ['powerpc',   'darwin',  '7'],
-      'powerpc-darwin8'        => ['powerpc',   'darwin',  '8'],
-      'powerpc-linux'          => ['powerpc',   'linux',   nil],
-      'powerpc64-linux'        => ['powerpc64', 'linux',   nil],
-      'sparc-solaris2.10'      => ['sparc',     'solaris', '2.10'],
-      'sparc-solaris2.8'       => ['sparc',     'solaris', '2.8'],
-      'sparc-solaris2.9'       => ['sparc',     'solaris', '2.9'],
-      'universal-darwin8'      => ['universal', 'darwin',  '8'],
-      'universal-darwin9'      => ['universal', 'darwin',  '9'],
-      'i386-cygwin'            => ['x86',       'cygwin',  nil],
-      'i686-darwin'            => ['x86',       'darwin',  nil],
-      'i686-darwin8.4.1'       => ['x86',       'darwin',  '8'],
-      'i386-freebsd4.11'       => ['x86',       'freebsd', '4'],
-      'i386-freebsd5'          => ['x86',       'freebsd', '5'],
-      'i386-freebsd6'          => ['x86',       'freebsd', '6'],
-      'i386-freebsd7'          => ['x86',       'freebsd', '7'],
-      'i386-java1.5'           => ['x86',       'java',    '1.5'],
-      'x86-java1.6'            => ['x86',       'java',    '1.6'],
-      'i386-java1.6'           => ['x86',       'java',    '1.6'],
-      'i686-linux'             => ['x86',       'linux',   nil],
-      'i586-linux'             => ['x86',       'linux',   nil],
-      'i486-linux'             => ['x86',       'linux',   nil],
-      'i386-linux'             => ['x86',       'linux',   nil],
-      'i586-linux-gnu'         => ['x86',       'linux',   nil],
-      'i386-linux-gnu'         => ['x86',       'linux',   nil],
-      'i386-mingw32'           => ['x86',       'mingw32', nil],
-      'i386-mswin32'           => ['x86',       'mswin32', nil],
-      'i386-openbsd4.0'        => ['x86',       'openbsd', '4.0'],
-      'i386-solaris2.10'       => ['x86',       'solaris', '2.10'],
-      'i386-solaris2.8'        => ['x86',       'solaris', '2.8'],
-      'x86_64-linux'           => ['x86_64',    'linux',   nil],
-      'x86_64-openbsd3.9'      => ['x86_64',    'openbsd', '3.9'],
-      'x86_64-openbsd4.0'      => ['x86_64',    'openbsd', '4.0'],
+      'amd64-freebsd6'         => ['amd64',     'freebsd',   '6'],
+      'hppa2.0w-hpux11.31'     => ['hppa2.0w',  'hpux',      '11'],
+      'java'                   => [nil,         'java',      nil],
+      'powerpc-aix5.3.0.0'     => ['powerpc',   'aix',       '5'],
+      'powerpc-darwin7'        => ['powerpc',   'darwin',    '7'],
+      'powerpc-darwin8'        => ['powerpc',   'darwin',    '8'],
+      'powerpc-linux'          => ['powerpc',   'linux',     nil],
+      'powerpc64-linux'        => ['powerpc64', 'linux',     nil],
+      'sparc-solaris2.10'      => ['sparc',     'solaris',   '2.10'],
+      'sparc-solaris2.8'       => ['sparc',     'solaris',   '2.8'],
+      'sparc-solaris2.9'       => ['sparc',     'solaris',   '2.9'],
+      'universal-darwin8'      => ['universal', 'darwin',    '8'],
+      'universal-darwin9'      => ['universal', 'darwin',    '9'],
+      'i386-cygwin'            => ['x86',       'cygwin',    nil],
+      'i686-darwin'            => ['x86',       'darwin',    nil],
+      'i686-darwin8.4.1'       => ['x86',       'darwin',    '8'],
+      'i386-freebsd4.11'       => ['x86',       'freebsd',   '4'],
+      'i386-freebsd5'          => ['x86',       'freebsd',   '5'],
+      'i386-freebsd6'          => ['x86',       'freebsd',   '6'],
+      'i386-freebsd7'          => ['x86',       'freebsd',   '7'],
+      'i386-java1.5'           => ['x86',       'java',      '1.5'],
+      'x86-java1.6'            => ['x86',       'java',      '1.6'],
+      'i386-java1.6'           => ['x86',       'java',      '1.6'],
+      'i686-linux'             => ['x86',       'linux',     nil],
+      'i586-linux'             => ['x86',       'linux',     nil],
+      'i486-linux'             => ['x86',       'linux',     nil],
+      'i386-linux'             => ['x86',       'linux',     nil],
+      'i586-linux-gnu'         => ['x86',       'linux',     nil],
+      'i386-linux-gnu'         => ['x86',       'linux',     nil],
+      'i386-mingw32'           => ['x86',       'mingw32',   nil],
+      'i386-mswin32'           => ['x86',       'mswin32',   nil],
+      'i386-netbsdelf'         => ['x86',       'netbsdelf', nil],
+      'i386-openbsd4.0'        => ['x86',       'openbsd',   '4.0'],
+      'i386-solaris2.10'       => ['x86',       'solaris',   '2.10'],
+      'i386-solaris2.8'        => ['x86',       'solaris',   '2.8'],
+      'x86_64-linux'           => ['x86_64',    'linux',     nil],
+      'x86_64-openbsd3.9'      => ['x86_64',    'openbsd',   '3.9'],
+      'x86_64-openbsd4.0'      => ['x86_64',    'openbsd',   '4.0'],
     }
 
     test_cases.each do |arch, expected|
